# ComfyUI-Qwen3-TTS

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
qwen_tts/core/: rope_compat.py
qwen_tts/core/models/: configuration_qwen3_tts.py  modeling_qwen3_tts.py
qwen_tts/core/tokenizer_25hz/vq/: whisper_encoder.py
qwen_tts/inference/: qwen3_tts_model.py
